2005-05-10 Magnus Hagdorn
 * erosion_advect.f90: use glimmer_interpolate2d to interpolate velos
 * glimmer_interpolate.f90: improve BC of bilinear interpolation routine
 
2005-05-10 Magnus Hagdorn
 * sparse.f90: make reals double precision, change new_sparse_matrix to subroutine
 * erosion.f90: changed calls of new_sparse_matrix to subroutine
 * test_integrate2d.f90: ditto
 * erosion_integrate2d.f90: make reals double precision
 * glimmer_coordinates.f90: add reciprocal grid spacing
 * glimmer_interpolate2d.f90: new 2d interpolation routines, so far only bilinear
 * test_interpolate2d.f90: test program
 * configure.in: require glimmer 0.5.2

2005-05-09 Magnus Hagdorn
 * erosion.f90: read erosion varibles from netCDF during initialisation
 * test_transport.f90: fix bugs

2005-04-07 Magnus Hagdorn
 * eis_erosion.f90: default sediment thickness of 5m
 * simple_erosion.f90: ditto
 * erosion.f90: disable isostasy for now, fix some probs
 * erosion_setup.f90: forgot to write some settings to log
 * erosion_types.f90: make some vars double precision
 * erosion_vars.def: change scaling, add seds2_max
 
2005-04-04 Magnus Hagdorn
 * merged in SIMPLE-EROSION branch
	
2005-04-01 Magnus Hagdorn
 * erosion_advect.f90: added optional parameter to multiply velos with a factor
 * erosion_integrate2d.f90: some cosmetics
 * erosion_setup.f90: added transport related options
 * erosion_types.f90: added transport related variables
 * erosion_transport.f90: calc_lagrange does not set velo field
 * geometry.f90: replace .eq.0 with abs().le.tolerance
 * test_transport.f90: time step is now double precision
 * erosion.f90: hooked up transport
 * .config files: fixed netCDF I/O statements, they were renamed to [CF ...]
 * er-transport1.config: new test configuration for transport code
	
2005-02-16 Magnus Hagdorn
 * erosion_transport.f90: added transport module
 * test_transport.f90: initial test prog for transport stuff	
 * erosion.f90: initialise transport code during erosion init