@@ -11,9 +11,12 @@ EXTRA_DIST = f90_dep.mak
 BUILT_SOURCES = erosion_io.f90
 CLEANFILES = $(BUILT_SOURCES) f90_dep.mak
 
+#LAGRANGIAN = erosion_integrate2d.f90 erosion_transport_fv.f90
+LAGRANGIAN = erosion_transport_interp.f90
+
 liberosion_a_SOURCES = erosion.f90 erosion_types.f90 erosion_setup.f90 erosion_io.f90 erosion_version.f90 \
-                       erosion_advect.f90 erosion_integrate2d.f90 erosion_transport.f90 geometry.f90 \
-                       glimmer_coordinates.f90 runge_kutta.f90 sparse.f90 glimmer_interpolate2d.f90
+                       erosion_advect.f90 geometry.f90 glimmer_coordinates.f90 runge_kutta.f90 sparse.f90 \
+                       glimmer_interpolate2d.f90 $(LAGRANGIAN)
 
 simple_erosion_SOURCES = simple_erosion.f90
 simple_erosion_LDADD = liberosion.a -lclimate -lglide -lglimmer -lslap
@@ -38,7 +41,9 @@ test_advect_SOURCES = test_advect.f90 erosion_advect.f90 runge_kutta.f90 glimmer
 erosion_io.f90:	erosion_vars.def @GLIMMER_PREFIX@/share/glimmer/ncdf_template.f90.in
 		$(PYTHON) @GLIMMER_PREFIX@/bin/generate_ncvars.py $^
 
-f90_dep.mak:	*.f90 $(BUILT_SOURCES)
+f90_dep.mak:	$(liberosion_a_SOURCES) $(simple_erosion_SOURCES) $(eis_erosion_SOURCES) $(test_transport_SOURCES) \
+                $(test_integrate2d_SOURCES) $(test_interpolate2d_SOURCES) $(test_geometry_SOURCES) $(test_rk4_SOURCES) \
+                $(test_advect_SOURCES)
 		$(PYTHON) @GLIMMER_PREFIX@/bin/f90_dependencies.py -o $@ $^
 
 -include f90_dep.mak
